--- a/AB_Testing.ipynb
+++ b/AB_Testing.ipynb
@@ -221,9 +221,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Split of control users who saw old page vs treatment users who saw new page:  49.99 %  50.01 %\n",
+      "Number of control users who converted on old page:  17489\n",
+      "Percentage of control users who converted:  12.04 %\n",
+      "Number of treatment users who converted on new page:  17264\n",
+      "Percentage of treatment users who converted:  11.88 %\n"
+     ]
+    }
+   ],
    "source": [
     "#Show the % split between users who saw new vs old page\n",
     "#Calculate pooled probability\n",
@@ -252,20 +264,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Experiment Design"
+    "#### Set Test Parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Required sample size:  17209  per group\n"
+     ]
+    }
+   ],
    "source": [
     "#Check what sample size is required\n",
     "baseline_rate = conversions_control / total_users_control\n",
     "practical_significance = 0.01 #user defined\n",
-    "confidence_level = 0.05 #for a 95% confidence interval\n",
-    "sensitivity = 0.8\n",
+    "confidence_level = 0.05 #user defined, for a 95% confidence interval\n",
+    "sensitivity = 0.8 #user defined\n",
     "\n",
     "effect_size = sms.proportion_effectsize(baseline_rate, baseline_rate + practical_significance)\n",
     "sample_size = sms.NormalIndPower().solve_power(effect_size = effect_size, power = sensitivity, \n",
@@ -282,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,9 +320,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do not reject the null hypothesis\n",
+      "The lower bound of the confidence interval is  -0.39 %\n",
+      "The upper bound of the confidence interval is  0.08 %\n"
+     ]
+    }
+   ],
    "source": [
     "#Calculate pooled standard error and margin of error\n",
     "se_pooled = math.sqrt(prob_pooled * (1 - prob_pooled) * (1 / total_users_control + 1 / total_users_treatment))\n",
@@ -324,6 +354,13 @@
     "print(\"The lower bound of the confidence interval is \", round(lower_bound * 100, 2), \"%\")\n",
     "print(\"The upper bound of the confidence interval is \", round(upper_bound * 100, 2), \"%\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
